--- a/.env
+++ b/.env
@@ -4,4 +4,26 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+
+# Vercel の.env.localの値をすべてこのファイルにコピペ
+# .env.localファイルの方はコメントアウトか削除する必要があるので注意
+
+POSTGRES_URL="postgres://default:W6AmSYzRvd0g@ep-bitter-salad-a1r5mt6n-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:W6AmSYzRvd0g@ep-bitter-salad-a1r5mt6n-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:W6AmSYzRvd0g@ep-bitter-salad-a1r5mt6n-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:W6AmSYzRvd0g@ep-bitter-salad-a1r5mt6n.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-bitter-salad-a1r5mt6n-pooler.ap-southeast-1.aws.neon.tech"
+POSTGRES_PASSWORD="W6AmSYzRvd0g"
+POSTGRES_DATABASE="verceldb"
+
+GITHUB_ID="Ov23lixpEb46BvtdDWV1"
+GITHUB_SECRET="194d6d0f66ace59b24259999d22352bd7344e207"
+
+# microCMSで最初に決めたサービスID
+NEXT_PUBLIC_SERVICE_DOMAIN="satokyoheitest"
+
+# microCMSの「APIキー管理」からコピペ
+NEXT_PUBLIC_API_KEY="HvwjCrMDevkXBi47zWFrzkdoSicprB3MPfB9"
