--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^4.24.8",
     "prisma": "^5.21.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^17.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
