--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "book-commerce-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.21.1",
-    "@vercel/postgres": "^0.10.0",
-    "microcms-js-sdk": "^3.1.2",
-    "next": "14.2.15",
-    "next-auth": "^4.24.8",
-    "prisma": "^5.21.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "stripe": "^17.2.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "book-commerce-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "postinstall": "prisma generate",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^5.21.1",
+        "@vercel/postgres": "^0.10.0",
+        "microcms-js-sdk": "^3.1.2",
+        "next": "14.2.15",
+        "next-auth": "^4.24.8",
+        "prisma": "^5.21.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "stripe": "^17.2.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.15",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
