--- a/.env
+++ b/.env
@@ -35,4 +35,4 @@ STRIPE_SECRET_KEY="sk_test_51QBshyLJAz5sodRHActvV5cgaIgtCgThI05uefpAuIyWXTPeeIT2
 NEXTAUTH_SECRET="iZM0tc30gFk2YFp4PKepyLgYY3wt6KgBZmqaRwCsY4A="
 
 NEXT_PUBLIC_API_URL="http://localhost:3000/api"
-
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
